--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lenis": "^1.0.42",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
