--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "gsap": "^3.12.2",
     "lenis": "^1.0.42",
+    "lucide-react": "^0.562.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
